--- a/app/src/main/res/layout/fragment_product_preview.xml
+++ b/app/src/main/res/layout/fragment_product_preview.xml
@@ -152,6 +152,7 @@
             <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="10dp"
                 android:fontFamily="@font/poppins_medium"
@@ -164,6 +165,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
+                android:visibility="gone"
                 >
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -172,6 +174,7 @@
                     android:layout_height="wrap_content"
                     android:text="this is product description"
                     android:fontFamily="@font/poppins_medium"
+                    android:visibility="gone"
                     android:gravity="center_vertical"
                     android:textColor="@color/primary_text_color"
                     android:layout_gravity="center_vertical"
@@ -181,6 +184,7 @@
             <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="10dp"
                 android:fontFamily="@font/poppins_medium"
@@ -193,6 +197,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
+                android:visibility="gone"
                 >
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -200,6 +205,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="this is product name"
+                    android:visibility="gone"
                     android:fontFamily="@font/poppins_medium"
                     android:textColor="@color/primary_text_color"
                     android:layout_gravity="center_vertical"
@@ -212,6 +218,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="10dp"
+                android:visibility="gone"
                 android:fontFamily="@font/poppins_medium"
                 android:text="@string/_expiry_date"
                 android:textColor="@color/primary_text_color"
@@ -221,6 +228,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
+                android:visibility="gone"
                 >
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -229,6 +237,7 @@
                     android:layout_height="wrap_content"
                     android:text="this is product expiry date"
                     android:fontFamily="@font/poppins_medium"
+                    android:visibility="gone"
                     android:textColor="@color/primary_text_color"
                     android:layout_gravity="center_vertical"
                     android:inputType="text" />
@@ -239,6 +248,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="10dp"
+                android:visibility="gone"
                 android:fontFamily="@font/poppins_medium"
                 android:text="@string/_7_farm_location"
                 android:textColor="@color/primary_text_color"
@@ -246,6 +256,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/TextInputTheme"
                 android:layout_width="match_parent"
+                android:visibility="gone"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
                 >
@@ -269,12 +280,14 @@
                 android:layout_marginTop="10dp"
                 android:text="@string/_price"
                 android:fontFamily="@font/poppins_medium"
+                android:visibility="gone"
                 android:textColor="@color/primary_text_color"
                 android:textSize="16sp" />
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/TextInputTheme"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:layout_margin="16dp"
                 >
 
@@ -286,6 +299,7 @@
                     android:fontFamily="@font/poppins_medium"
                     android:textColor="@color/primary_text_color"
                     android:layout_gravity="center_vertical"
+                    android:visibility="gone"
                     android:inputType="text" />
             </com.google.android.material.textfield.TextInputLayout>
 
