--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,6 +14,17 @@
         <item name="colorControlNormal">@color/white</item>
     </style>
 
+    <style name="customRounded4Corner" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">0dp</item>
+        <item name="cornerSizeTopRight">20dp</item>
+        <item name="cornerSizeBottomLeft">20dp</item>
+    </style>
+
+    <style name="AddItemCardViewSetting" parent="@style/Widget.MaterialComponents.CardView">
+        <item name="shapeAppearanceOverlay">@style/customRounded4Corner</item>
+    </style>
+
     <style name="toolbarTheme" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
 
     </style>
@@ -22,5 +33,11 @@
     </style>
     <style name="TextInputEditTextTheme" parent="Widget.MaterialComponents.TextInputEditText.OutlinedBox">
         <item name="colorControlNormal">@color/white</item>
+    </style>
+    <style name="customRoundedImageView" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">0dp</item>
+        <item name="cornerSizeTopRight">16dp</item>
+        <item name="cornerSizeBottomLeft">16dp</item>
     </style>
 </resources>
